--- a/resources/view/menu_scene_view.fxml
+++ b/resources/view/menu_scene_view.fxml
@@ -12,14 +12,15 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.controller.MenuSceneController">
     <children>
-        <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="209.0" prefWidth="603.0">
+        <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="377.0" prefWidth="603.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="603.0" minWidth="10.0" prefWidth="603.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="0.0" prefWidth="0.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints maxHeight="268.0" minHeight="10.0" prefHeight="124.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="268.0" minHeight="0.0" prefHeight="66.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="268.0" minHeight="10.0" prefHeight="115.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="268.0" minHeight="0.0" prefHeight="79.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="268.0" minHeight="10.0" prefHeight="178.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
                 <Pane prefHeight="123.0" prefWidth="603.0">
@@ -53,6 +54,22 @@
                   <Button layoutX="154.0" layoutY="43.0" mnemonicParsing="false" onAction="#showColorGradient" text="Degradee colores" />
                   <Button layoutX="282.0" layoutY="43.0" mnemonicParsing="false" onAction="#showImageWithCircle" text="Circulo blanco" />
                   <Button layoutX="393.0" layoutY="43.0" mnemonicParsing="false" onAction="#showImageWithRectangle" text="Cuadrado blanco" />
+               </children>
+            </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
+               <children>
+                  <Label layoutX="31.0" layoutY="14.0" text="Transformación de sistema y división de canales">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+                  <Button layoutX="31.0" layoutY="50.0" mnemonicParsing="false" onAction="#showRGBImageRedChannel" text="Canal Rojo RGB" />
+                  <Button layoutX="146.0" layoutY="50.0" mnemonicParsing="false" onAction="#showRGBImageGreenChannel" text="Canal Verde RGB" />
+                  <Button layoutX="287.0" layoutY="50.0" mnemonicParsing="false" onAction="#showRGBImageBlueChannel" text="Canal Azul RGB" />
+                  <Button layoutX="485.0" layoutY="50.0" mnemonicParsing="false" text="RGB a HSV" />
+                  <Button layoutX="31.0" layoutY="90.0" mnemonicParsing="false" text="Canal Matiz HSV" />
+                  <Button layoutX="146.0" layoutY="90.0" mnemonicParsing="false" text="Canal Saturación HSV" />
+                  <Button layoutX="285.0" layoutY="90.0" mnemonicParsing="false" text="Canal Valor HSV" />
                </children>
             </Pane>
             </children>
