--- a/resources/view/menu_scene_view.fxml
+++ b/resources/view/menu_scene_view.fxml
@@ -66,10 +66,9 @@
                   <Button layoutX="31.0" layoutY="50.0" mnemonicParsing="false" onAction="#showRGBImageRedChannel" text="Canal Rojo RGB" />
                   <Button layoutX="146.0" layoutY="50.0" mnemonicParsing="false" onAction="#showRGBImageGreenChannel" text="Canal Verde RGB" />
                   <Button layoutX="287.0" layoutY="50.0" mnemonicParsing="false" onAction="#showRGBImageBlueChannel" text="Canal Azul RGB" />
-                  <Button layoutX="485.0" layoutY="50.0" mnemonicParsing="false" text="RGB a HSV" />
-                  <Button layoutX="31.0" layoutY="90.0" mnemonicParsing="false" text="Canal Matiz HSV" />
-                  <Button layoutX="146.0" layoutY="90.0" mnemonicParsing="false" text="Canal Saturación HSV" />
-                  <Button layoutX="285.0" layoutY="90.0" mnemonicParsing="false" text="Canal Valor HSV" />
+                  <Button layoutX="31.0" layoutY="90.0" mnemonicParsing="false" onAction="#showHueHSVChannel" text="Canal Matiz HSV" />
+                  <Button layoutX="146.0" layoutY="90.0" mnemonicParsing="false" onAction="#showSaturationHSVChannel" text="Canal Saturación HSV" />
+                  <Button layoutX="285.0" layoutY="90.0" mnemonicParsing="false" onAction="#showValueHSVChannel" text="Canal Valor HSV" />
                </children>
             </Pane>
             </children>
