--- a/resources/view/main_scene_view.fxml
+++ b/resources/view/main_scene_view.fxml
@@ -37,7 +37,7 @@
                               <Menu mnemonicParsing="false" text="Space Domain">
                                 <items>
                                   <MenuItem mnemonicParsing="false" onAction="#calculateNegativeImage" text="Negative" />
-                                    <MenuItem mnemonicParsing="false" text="Unspecified Action" />
+                                    <MenuItem mnemonicParsing="false" onAction="#threshold" text="Threshold" />
                                 </items>
                               </Menu>
                                         <MenuItem mnemonicParsing="false" onAction="#cutPartialImage" text="Cut" />
