--- a/resources/view/contrast_scene_view.fxml
+++ b/resources/view/contrast_scene_view.fxml
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="169.0" prefWidth="436.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.controller.ContrastSceneController">
-   <children>
-      <Label layoutX="63.0" layoutY="29.0" text="Enter s1 parameter" />
-      <Label layoutX="259.0" layoutY="29.0" text="Enter s2 parameter" />
-      <TextField fx:id="s1Field" layoutX="83.0" layoutY="58.0" prefHeight="25.0" prefWidth="60.0" />
-      <TextField fx:id="s2Field" layoutX="279.0" layoutY="58.0" prefHeight="25.0" prefWidth="60.0" />
-      <Button layoutX="181.0" layoutY="130.0" mnemonicParsing="false" onAction="#applyContrast" text="Apply" />
-      <Label fx:id="s1ValidationLabel" layoutX="39.0" layoutY="94.0" prefHeight="17.0" prefWidth="148.0" />
-      <Label fx:id="s2ValidationLabel" layoutX="235.0" layoutY="94.0" prefHeight="17.0" prefWidth="148.0" />
-   </children>
+<AnchorPane prefHeight="169.0" prefWidth="579.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.controller.ContrastSceneController">
+    <Label layoutX="99.0" layoutY="29.0" text="Enter s1 parameter" />
+    <Label layoutX="375.0" layoutY="29.0" text="Enter s2 parameter" />
+    <TextField fx:id="s1Field" layoutX="127.0" layoutY="58.0" prefHeight="25.0" prefWidth="60.0" />
+    <TextField fx:id="s2Field" layoutX="404.0" layoutY="58.0" prefHeight="25.0" prefWidth="60.0" />
+    <Button layoutX="263.0" layoutY="128.0" mnemonicParsing="false" onAction="#applyContrast" text="Apply" />
+    <Label fx:id="s1ValidationLabel" alignment="CENTER" layoutX="44.0" layoutY="94.0" prefHeight="17.0" prefWidth="226.0" />
+    <Label fx:id="s2ValidationLabel" alignment="CENTER" layoutX="360.0" layoutY="94.0" prefHeight="17.0" prefWidth="148.0" />
 </AnchorPane>
