--- a/resources/view/main_scene_view.fxml
+++ b/resources/view/main_scene_view.fxml
@@ -38,12 +38,7 @@
                                 <items>
                                     <MenuItem mnemonicParsing="false" onAction="#calculateNegativeImage" text="Negative" />
                                     <MenuItem mnemonicParsing="false" onAction="#threshold" text="Threshold" />
-
-                                    <Menu mnemonicParsing="false" text="Image Operations">
-                                    <items>
-                                        <MenuItem mnemonicParsing="false" onAction="#calculateImagesSum" text="Images Sum" />
-                                    </items>
-                                    </Menu>
+                                    <MenuItem mnemonicParsing="false" onAction="#calculateImagesOperations" text="Image Operations" />
                                 </items>
                               </Menu>
                                         <MenuItem mnemonicParsing="false" onAction="#cutPartialImage" text="Cut" />
